Close #41, refactor `Configuration` to be asynchronous
